--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [Allgemein]
-version = 1.0.0
+version = 1.0.1
 releasedatum = 20240209
-eulagelesen = True
-alterspruefung = True
-zahlengrenzenmuss = True
+eulagelesen = False
+alterspruefung = False
+zahlengrenzenmuss = False
 
 [Benutzer]
 namen = Benutzer 1
