--- a/config.ini
+++ b/config.ini
@@ -2,8 +2,7 @@
 version = 1.0.3
 releasedatum = 20240209
 eulagelesen = False
-alterspruefung = False
-zahlengrenzenmuss = False
+bereichsgrenzenerzwingen = False
 
 [Benutzer]
 namen = Benutzer 1
