--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
 [Allgemein]
-version = 1.0.4
-releasedatum = 20240209
+version = 1.1.0
+releasedatum = 20240323
 eulagelesen = False
 bereichsgrenzenerzwingen = False
+standardscore =
 
 [Benutzer]
 namen = Benutzer 1
