--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,9 @@
 [Allgemein]
-version = 1.7.2
-releasedatum = 20240401
+version = 1.8.0
+releasedatum = 20240407
 eulagelesen = False
 bereichsgrenzenerzwingen = False
-standardscore =
+standardscore = Marburger Herz-Score
 
 [Benutzer]
 namen = Benutzer 1
