--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ version = 1.8.0
 releasedatum = 20240407
 eulagelesen = False
 bereichsgrenzenerzwingen = False
-standardscore = Marburger Herz-Score
+standardscore = 
 
 [Benutzer]
 namen = Benutzer 1
