Neue Scores: APGAR | Bishop

--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,10 @@
 [Allgemein]
-version = 1.10.0
+version = 1.11.0
 releasedatum = 20240415
 eulagelesen = False
 bereichsgrenzenerzwingen = False
 standardscore = 
+scoreanzahl = 0
 
 [Benutzer]
 namen = Benutzer 1
