--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [Allgemein]
-version = 1.11.0
-releasedatum = 20240415
+´r4s42waversion = 1.12.0
+releasedatum = 20240420
 eulagelesen = False
 bereichsgrenzenerzwingen = False
 standardscore = 
