Automatische Updateprüfung optional

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Allgemein]
-´r4s42waversion = 1.12.0
+version = 1.12.0
 releasedatum = 20240420
 eulagelesen = False
 bereichsgrenzenerzwingen = False
