GDT-Tools Updater, neue Scores: ACT, CAT

--- a/config.ini
+++ b/config.ini
@@ -1,10 +1,12 @@
 [Allgemein]
-version = 1.14.0
-releasedatum = 20240505
+version = 1.14.1
+releasedatum = 202405013
 eulagelesen = False
 bereichsgrenzenerzwingen = False
 standardscore = 
 scoreanzahl = 0
+autoupdate = True
+updaterpfad = 
 
 [Benutzer]
 namen = Benutzer 1
