PDF-Erstellung, Fehlerverbesserungen

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,5 @@
 [Allgemein]
-version = 1.15.2
+version = 1.16.0
 releasedatum = 202405021
 eulagelesen = False
 bereichsgrenzenerzwingen = False
@@ -7,6 +7,9 @@ standardscore =
 scoreanzahl = 0
 autoupdate = True
 updaterpfad = 
+pdferzeugen = False
+einrichtungsname = 
+einrichtunguebernehmen = False
 
 [Benutzer]
 namen = Benutzer 1
