--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [Allgemein]
-version = 1.21.0
-releasedatum = 20240725
+version = 1.21.1
+releasedatum = 20241009
 eulagelesen = False
 bereichsgrenzenerzwingen = False
 standardscore = 
@@ -10,6 +10,7 @@ updaterpfad =
 pdferzeugen = False
 einrichtungsname = 
 einrichtunguebernehmen = False
+archivierungspfad = 
 
 [Benutzer]
 namen = Benutzer 1
