Trenderstellung, Kontrastreichere Darstellung der Radiobuttons unter Windows, neuer Score: Gulich

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [Allgemein]
-version = 1.21.4
-releasedatum = 20241028
+version = 1.22.0
+releasedatum = 20241108
 eulagelesen = False
 bereichsgrenzenerzwingen = False
 standardscore = 
@@ -10,6 +10,7 @@ updaterpfad =
 pdferzeugen = False
 einrichtungsname = 
 einrichtunguebernehmen = False
+trendverzeichnis = 
 
 [Benutzer]
 namen = Benutzer 1
